--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('pagina_estaticas', filename='sokectListUser.css') }}">
     <title>Event Reservation</title>
 </head>
 <body>
@@ -54,7 +54,7 @@
     </div>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="{{ url_for('pagina_estaticas', filename='sokectListUser.js') }}"></script>
     <div id="confirmationModal" style="display: none;" class="modal">
         <div class="modal-content">
             <h3>Confirmar Reserva</h3>
