--- a/static/admin.css
+++ b/static/admin.css
@@ -1,7 +1,7 @@
 /* Geral */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f3f4f6; /* Fundo neutro */
+    background-color: #c7e9e3; /* Fundo neutro */
     margin: 0;
     padding: 20px;
     min-height: 100vh;
@@ -117,7 +117,7 @@ body {
 /* Cartão de Admin */
 .event-card {
     background-color: #ffffff;
-    padding: 20px;
+    padding: 35px;
     border-radius: 0px; /* Bordas retas */
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
